# libsodium

./: README.markdown
src/: CMakeLists.txt
src/libsodium/: CMakeLists.txt
