add_library(libsodium
    crypto_aead/chacha20poly1305/sodium/aead_chacha20poly1305.c
	crypto_aead/xchacha20poly1305/sodium/aead_xchacha20poly1305.c
	crypto_auth/crypto_auth.c
	crypto_auth/hmacsha256/auth_hmacsha256.c
	crypto_auth/hmacsha512/auth_hmacsha512.c
	crypto_auth/hmacsha512256/auth_hmacsha512256.c
	crypto_box/crypto_box.c
	crypto_box/crypto_box_easy.c
	crypto_box/crypto_box_seal.c
	crypto_box/curve25519xsalsa20poly1305/box_curve25519xsalsa20poly1305.c  
	crypto_core/ed25519/ref10/ed25519_ref10.c  
	crypto_core/hchacha20/core_hchacha20.c  
	crypto_core/hsalsa20/ref2/core_hsalsa20_ref2.c  
	crypto_core/hsalsa20/core_hsalsa20.c  
	crypto_core/salsa/ref/core_salsa_ref.c  
	crypto_generichash/crypto_generichash.c  
	crypto_generichash/blake2b/generichash_blake2.c  
	crypto_generichash/blake2b/ref/blake2.h  
	crypto_generichash/blake2b/ref/blake2b-compress-ref.c  
	crypto_generichash/blake2b/ref/blake2b-load-sse2.h  
	crypto_generichash/blake2b/ref/blake2b-load-sse41.h  
	crypto_generichash/blake2b/ref/blake2b-load-avx2.h  
	crypto_generichash/blake2b/ref/blake2b-ref.c  
	crypto_generichash/blake2b/ref/generichash_blake2b.c  
	crypto_hash/crypto_hash.c  
	crypto_hash/sha256/hash_sha256.c  
	crypto_hash/sha256/cp/hash_sha256_cp.c  
	crypto_hash/sha512/hash_sha512.c  
	crypto_hash/sha512/cp/hash_sha512_cp.c  
	crypto_kdf/blake2b/kdf_blake2b.c  
	crypto_kdf/crypto_kdf.c  
	crypto_kx/crypto_kx.c  
	crypto_onetimeauth/crypto_onetimeauth.c  
	crypto_onetimeauth/poly1305/onetimeauth_poly1305.c  
	crypto_onetimeauth/poly1305/onetimeauth_poly1305.h  
	crypto_onetimeauth/poly1305/donna/poly1305_donna.h  
	crypto_onetimeauth/poly1305/donna/poly1305_donna32.h  
	crypto_onetimeauth/poly1305/donna/poly1305_donna64.h  
	crypto_onetimeauth/poly1305/donna/poly1305_donna.c  
	crypto_pwhash/argon2/argon2-core.c  
	crypto_pwhash/argon2/argon2-core.h  
	crypto_pwhash/argon2/argon2-encoding.c  
	crypto_pwhash/argon2/argon2-encoding.h  
	crypto_pwhash/argon2/argon2-fill-block-ref.c  
	crypto_pwhash/argon2/argon2.c  
	crypto_pwhash/argon2/argon2.h  
	crypto_pwhash/argon2/blake2b-long.c  
	crypto_pwhash/argon2/blake2b-long.h 
	crypto_pwhash/argon2/blamka-round-ref.h  
	crypto_pwhash/argon2/pwhash_argon2i.c  
	crypto_pwhash/argon2/pwhash_argon2id.c  
	crypto_pwhash/crypto_pwhash.c  
	crypto_scalarmult/crypto_scalarmult.c  
	crypto_scalarmult/curve25519/ref10/x25519_ref10.c  
	crypto_scalarmult/curve25519/ref10/x25519_ref10.h  
	crypto_scalarmult/curve25519/scalarmult_curve25519.c  
	crypto_scalarmult/curve25519/scalarmult_curve25519.h  
	crypto_secretbox/crypto_secretbox.c  
	crypto_secretbox/crypto_secretbox_easy.c  
	crypto_secretbox/xsalsa20poly1305/secretbox_xsalsa20poly1305.c  
	crypto_secretstream/xchacha20poly1305/secretstream_xchacha20poly1305.c  
	crypto_shorthash/crypto_shorthash.c  
	crypto_shorthash/siphash24/shorthash_siphash24.c  
	crypto_shorthash/siphash24/ref/shorthash_siphash24_ref.c  
	crypto_shorthash/siphash24/ref/shorthash_siphash_ref.h  
	crypto_sign/crypto_sign.c  
	crypto_sign/ed25519/sign_ed25519.c  
	crypto_sign/ed25519/ref10/keypair.c  
	crypto_sign/ed25519/ref10/open.c  
	crypto_sign/ed25519/ref10/sign.c  
	crypto_sign/ed25519/ref10/sign_ed25519_ref10.h  
	crypto_stream/chacha20/stream_chacha20.c  
	crypto_stream/chacha20/stream_chacha20.h  
	crypto_stream/chacha20/ref/chacha20_ref.h  
	crypto_stream/chacha20/ref/chacha20_ref.c  
	crypto_stream/crypto_stream.c  
	crypto_stream/salsa20/stream_salsa20.c  
	crypto_stream/salsa20/stream_salsa20.h  
	crypto_stream/xsalsa20/stream_xsalsa20.c  
	crypto_verify/sodium/verify.c  
	include/sodium/private/chacha20_ietf_ext.h  
	include/sodium/private/common.h  
	include/sodium/private/ed25519_ref10.h  
	include/sodium/private/implementations.h  
	include/sodium/private/mutex.h  
	include/sodium/private/sse2_64_32.h  
	randombytes/randombytes.c  
	sodium/codecs.c  
	sodium/core.c  
	sodium/runtime.c  
	sodium/utils.c  
	sodium/version.c
    
    #includes
    include/sodium.h 
	include/sodium/core.h 
	include/sodium/crypto_aead_aes256gcm.h 
	include/sodium/crypto_aead_chacha20poly1305.h 
	include/sodium/crypto_aead_xchacha20poly1305.h 
	include/sodium/crypto_auth.h 
	include/sodium/crypto_auth_hmacsha256.h 
	include/sodium/crypto_auth_hmacsha512.h 
	include/sodium/crypto_auth_hmacsha512256.h 
	include/sodium/crypto_box.h 
	include/sodium/crypto_box_curve25519xchacha20poly1305.h 
	include/sodium/crypto_box_curve25519xsalsa20poly1305.h 
	include/sodium/crypto_core_ed25519.h 
	include/sodium/crypto_core_hchacha20.h 
	include/sodium/crypto_core_hsalsa20.h 
	include/sodium/crypto_core_salsa20.h 
	include/sodium/crypto_core_salsa2012.h 
	include/sodium/crypto_core_salsa208.h 
	include/sodium/crypto_generichash.h 
	include/sodium/crypto_generichash_blake2b.h 
	include/sodium/crypto_hash.h 
	include/sodium/crypto_hash_sha256.h 
	include/sodium/crypto_hash_sha512.h 
	include/sodium/crypto_kdf.h 
	include/sodium/crypto_kdf_blake2b.h 
	include/sodium/crypto_kx.h 
	include/sodium/crypto_onetimeauth.h 
	include/sodium/crypto_onetimeauth_poly1305.h 
	include/sodium/crypto_pwhash.h 
	include/sodium/crypto_pwhash_argon2i.h 
	include/sodium/crypto_pwhash_argon2id.h 
	include/sodium/crypto_pwhash_scryptsalsa208sha256.h 
	include/sodium/crypto_scalarmult.h 
	include/sodium/crypto_scalarmult_curve25519.h 
	include/sodium/crypto_scalarmult_ed25519.h 
	include/sodium/crypto_secretbox.h 
	include/sodium/crypto_secretbox_xchacha20poly1305.h 
	include/sodium/crypto_secretbox_xsalsa20poly1305.h 
	include/sodium/crypto_secretstream_xchacha20poly1305.h 
	include/sodium/crypto_shorthash.h 
	include/sodium/crypto_shorthash_siphash24.h 
	include/sodium/crypto_sign.h 
	include/sodium/crypto_sign_ed25519.h 
	include/sodium/crypto_sign_edwards25519sha512batch.h 
	include/sodium/crypto_stream.h 
	include/sodium/crypto_stream_chacha20.h 
	include/sodium/crypto_stream_salsa20.h 
	include/sodium/crypto_stream_salsa2012.h 
	include/sodium/crypto_stream_salsa208.h 
	include/sodium/crypto_stream_xchacha20.h 
	include/sodium/crypto_stream_xsalsa20.h 
	include/sodium/crypto_verify_16.h 
	include/sodium/crypto_verify_32.h 
	include/sodium/crypto_verify_64.h 
	include/sodium/export.h 
	include/sodium/randombytes.h 
	include/sodium/randombytes_salsa20_random.h 
	include/sodium/randombytes_sysrandom.h 
	include/sodium/runtime.h 
	include/sodium/utils.h
)